# canadian-salesman-problem

./: .gitignore  README.md  christofides_p.py  flake.nix  justfile  pyproject.toml  report.typ  template.typ
cctp/: __init__.py  __main__.py  christofides.py  cnn.py  cr.py  cr_LOCAL_8557.py  cr_p.py  graphs.py  tsp.py  utils.py
cr/: christofides_p.py  graph_utils.py  networkx_christofides.ipynb  test_cr.py  test_de_performance.ipynb
cstp/: __init__.py  __main__.py  christofides.py  christofides_p.py  christofides_test.py  cnn.py  graph_utils.py  graphs.py  tsp.py  types.py  utils.py
notebooks/: christofides_p.py  networkx_christofides.ipynb
paper/: bibliography.yml  paper.typ  template.typ
results/: christofides_ratio_results.pk  christofides_ratio_results_p.pk  christofides_runtime_results.pk  christofides_runtime_results_p.pk  cnn_ratio_clustered_results.pk  cnn_ratio_constant_results.pk  cnn_ratio_euclidian_results.pk  cnn_ratio_k_results.pk  cnn_ratio_manhattan_results.pk  cnn_ratio_power_law_results.pk  cnn_ratio_results.pk  cnn_runtime_k_results.pk  cnn_runtime_n_results.pk  cr_ratio_k_results.pk  cr_ratio_results.pk  cr_runtime_k_results.pk  cr_runtime_k_results_p.pk  cr_runtime_n_results.pk  cr_runtime_n_results_p.pk  graphs_ratio_clustered_k_results.pk  graphs_ratio_clustered_n_results.pk  graphs_ratio_constant_k_results.pk  graphs_ratio_constant_n_results.pk  graphs_ratio_constant_results.pk  graphs_ratio_euclidian_k_results.pk  graphs_ratio_euclidian_n_results.pk  graphs_ratio_manhattan_k_results.pk  graphs_ratio_manhattan_n_results.pk  graphs_ratio_power_law_k_results.pk  graphs_ratio_power_law_n_results.pk
scripts/: benchmark_christofides.py  benchmark_christofides_p.py  benchmark_ratio_christofides.py  benchmark_ratio_christofides_p.py  benchmark_ratio_cnn.py  benchmark_ratio_cr.py  benchmark_ratio_cyclicr.py  benchmark_ratio_graphs.py  benchmark_time_christofides.py  benchmark_time_cnn.py  test_cnn.py  (+12 more)
